<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bt_lab</name>
  <version>0.0.1</version>
  <description>Behaviour Tree CPP Lab</description>
  <license>MIT</license>
  
  <author email="krzy.wojciecho@gmail.com">Krzysztof Wojciechowski</author>
  <maintainer email="krzy.wojciecho@gmail.com">Krzysztof Wojciechowski</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>behaviortree_cpp</depend>
  <depend>behaviortree_ros2</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>tf2</depend>
  
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
